[package]
name = "egui_virtual_keyboard"
version = "0.1.2"
edition = "2021"
authors = ["SnailWithTea <tipounlogick@gmail.com>"]
description = "Simple Virtual Keyboard for egui"
readme = "README.md"
repository = "https://github.com/snail-with-tea/egui_virtual_keyboard"
license = "MIT OR Apache-2.0"
keywords = ["gui", "keyboard"]
include = ["LICENSE-APACHE", "LICENSE-MIT", "**/*.rs", "Cargo.toml"]


[dependencies]
egui = {version = "0.30.0"}
serde = {version = "1.0", features = ["derive"],optional = true}

[dev-dependencies]
eframe = { version = "0.30.0"}

[features]
default = ["serde"]
serde = ["dep:serde","egui/serde"]
